<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:gravity="center">
    <TextView android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/TitleTheme"
    android:text="@string/app_name"
    android:textSize="30sp"
    android:layout_marginBottom="40dp"
    android:layout_centerHorizontal="true"
    android:id="@+id/title">
</TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:background="@drawable/rounded_edit_text"
        android:id="@+id/name_edit_text"
        android:layout_below="@+id/title"
        android:gravity="center"
        android:hint="abc"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:background="@drawable/rounded_edit_text"
        android:id="@+id/email_edit_text"
        android:layout_below="@+id/name_edit_text"
        android:gravity="center"
        android:hint="abc@example.com"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:background="@drawable/rounded_edit_text"
        android:id="@+id/phone_edit_text"
        android:layout_below="@+id/email_edit_text"
        android:gravity="center"
        android:inputType="phone"
        android:hint="123489283"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_edit_text"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="10sp"
        android:orientation="horizontal"
        android:id="@+id/gender_layout">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroup">
        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:id="@+id/gender_male"/>
        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:text="@string/female"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            android:id="@+id/gender_female"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/age_view"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_marginLeft="40sp"
            android:text="@string/age"/>

        <EditText
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:id="@+id/age_edit_text"
            android:layout_marginLeft="10sp"
            android:background="@drawable/rounded_edit_text"
            android:gravity="center"
            android:inputType="number"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gender_layout"
        android:id="@+id/dob_layout"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_marginLeft="20sp"
            android:layout_gravity="center_vertical"
            android:text="@string/select_dob"
            android:id="@+id/select_dob_view"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/rounded_edit_text"
            android:id="@+id/dob_edit_text"
            android:gravity="center"
            android:hint="@string/hint_selected_date"/>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/rounded_edit_text"
        android:id="@+id/password_edit_text"
        android:layout_below="@+id/dob_layout"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/hint_enter_password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/rounded_edit_text"
        android:id="@+id/confirm_pwd_edit_text"
        android:layout_below="@+id/password_edit_text"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/hint_confirm_password"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edit_text"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="30sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/confirm_pwd_edit_text"
        android:id="@+id/register_btn"
        android:textColor="@color/colorAccent"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/sign_up">
    </Button>

</RelativeLayout>