<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:gravity="center">
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TitleTheme"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/title">
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:background="@drawable/rounded_edit_text"
        android:id="@+id/email_edit_text"
        android:layout_below="@+id/title"
        android:gravity="center"
        android:hint="abc@example.com"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/rounded_edit_text"
        android:id="@+id/password_edit_text"
        android:layout_below="@+id/email_edit_text"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/hint_enter_password"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edit_text"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="10sp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/password_edit_text"
        android:id="@+id/login_btn"
        android:text="@string/login">
    </Button>
<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textColor="@color/colorAccent"-->
<!--        android:layout_below="@+id/login_btn"-->
<!--        android:text="@string/forget_pwd_text"-->
<!--        android:id="@+id/forgot_pwd_text"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:layout_alignParentRight="true"-->
<!--        android:layout_marginRight="20sp">-->
<!--    </TextView>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:gravity="center"
        android:layout_marginTop="40sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/no_account_text"
            android:textColor="@color/colorAccent"
            android:layout_centerInParent="true"
            android:text="@string/no_account_text">
        </TextView>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edit_text"
            android:text="@string/sign_up"
            android:layout_marginLeft="20sp"
            android:layout_toRightOf="@+id/no_account_text"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"
            android:id="@+id/signUp_btn">
        </Button>
    </RelativeLayout>
</RelativeLayout>