<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="120sp"
    android:background="@color/colorPrimary">

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TitleTheme"
        android:text="@string/error"
        android:textSize="30sp"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="20sp"
        android:textColor="@color/colorAccent"
        android:id="@+id/title">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="10sp"
        android:id="@+id/error_message"
        android:textSize="20sp"
        android:text="@string/default_error_msg"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/title"
        android:gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edit_text"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="30sp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/error_message"
        android:id="@+id/submit_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20sp"
        android:text="@string/ok"/>
</RelativeLayout>